<resources>
    <string name="app_name">mobil</string>
    <string name="welcome">Üdvözöllek</string>
    <string name="descriptionMain">Regisztrálj, jelentkezz be, vagy böngéssz kinálatunkból</string>
    <string name="registration">Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="searchMain">Böngéssz!</string>
    <string name="firstName">Keresztnév</string>
    <string name="lastName">Vezetéknév</string>
    <string name="password">Jelszó</string>
    <string name="passwordAgain">Jelszó mégegyszer</string>
    <string name="birthDate">Születési dátum</string>
    <string name="cancel">Vissza</string>
    <string name="email">Email</string>
    <string name="all_courses">Összes kurzus</string>
    <string name="my_courses">Felvett kurzusok</string>
    <string name="own_courses">Saját kurzusok</string>
    <string name="profile">Profil</string>
    <string name="logout">Kijelentkezés</string>
    <string name="datas">Adatok</string>
    <string name="save">Mentés</string>
    <string name="delete">Törlés</string>
    <string name="details">Részletek</string>
    <string name="teacher">Oktató</string>
    <string name="add_course">Kurzus készítése</string>
    <string name="add_course_title">A kurzus címe</string>
    <string name="add_course_short_desc">A kurzus rövid leírása (megjelenik a főoldalon)</string>
    <string name="add_course_desc">A kurzus leírása</string>
    <string name="add_course_start_date">A kurzus kezdetének ideje (formátum: yyyy-MM-dd)</string>
    <string name="add_course_price">A kurzus ára</string>
    <string name="course_details">Kurzus részletek</string>
    <string name="course_count">A kurzus létszáma</string>
    <string name="leave">Kilépés</string>
    <string name="join">Jelentkezés</string>
    <string name="press_for_details">Kattins a részletekért</string>
    <string name="remember_me">Emlékezz rám</string>
</resources>